--- a/04-Front-End/03-Bootstrap/Optional-01-Slack-copycat/index.html
+++ b/04-Front-End/03-Bootstrap/Optional-01-Slack-copycat/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css2?family=Varela">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Varela">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Fontawesome CSS -->
