--- a/04-Front-End/03-Bootstrap/02-Bootstrap-prototyping/index.html
+++ b/04-Front-End/03-Bootstrap/02-Bootstrap-prototyping/index.html
@@ -61,28 +61,28 @@
           <!-- make a card -->
           <div class="">
             <p><strong>Diavola</strong></p>
-            <p><small>Tomato, basil, mozzarella</small></p>
+            <p><small>Spicy salami, tomato, basil, mozzarella</small></p>
             <span>£5.95</span>
           </div>
 
           <!-- make a card -->
           <div class="">
             <p><strong>Regina</strong></p>
-            <p><small>Tomato, basil, mozzarella</small></p>
+            <p><small>Mushrooms, tomato, basil, mozzarella</small></p>
             <span>£5.95</span>
           </div>
 
           <!-- make a card -->
           <div class="">
             <p><strong>4 Formaggi</strong></p>
-            <p><small>Tomato, basil, mozzarella</small></p>
+            <p><small>Gorgonzola, parmesan, robiola, tomato, basil, mozzarella</small></p>
             <span>£5.95</span>
           </div>
 
           <!-- make a card -->
           <div class="">
             <p><strong>4 stagioni</strong></p>
-            <p><small>Tomato, basil, mozzarella</small></p>
+            <p><small>Parma ham, mushrooms, capers, anchovy, tomato, basil, mozzarella</small></p>
             <span>£5.95</span>
           </div>
           <!-- /menu -->
