--- a/04-Front-End/06-HTTP-and-AJAX/01-Click-me/index.html
+++ b/04-Front-End/06-HTTP-and-AJAX/01-Click-me/index.html
@@ -12,6 +12,6 @@
 
   <button class="btn btn-lg btn-success">Click me!</button>
 
-  <script src="main.js"></script>
+  <script src="lib/index.js"></script>
 </body>
 </html>
