--- a/04-Front-End/06-HTTP-and-API/05-Weather/index.html
+++ b/04-Front-End/06-HTTP-and-API/05-Weather/index.html
@@ -37,6 +37,6 @@
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <script src="lib/index.js"></script>
   </body>
 </html>
