js & dom - review event_or_odd

--- a/04-Front-End/04-JS-and-DOM/01-Even-or-odd/index.html
+++ b/04-Front-End/04-JS-and-DOM/01-Even-or-odd/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <h1 class="text-center my-5">Even or odd?</h1>
+      <h1 class="text-center my-5">Even or odd? 🧮</h1>
       <div class="col-12 mt-5 mb-3">
         <div class="row justify-content-center">
           <div class="col-3">
