--- a/04-Front-End/07-AJAX/04-Ajax-Search/index.html
+++ b/04-Front-End/07-AJAX/04-Ajax-Search/index.html
@@ -26,6 +26,9 @@
           </form>
         </div>
       </div>
+      <div class="row" id="movie-posters">
+        <!-- TODO: Display movie posters here -->
+      </div>
     </div>
 
     <script src="lib/index.js"></script>
