--- a/04-Front-End/07-AJAX/04-Ajax-Search/index.html
+++ b/04-Front-End/07-AJAX/04-Ajax-Search/index.html
@@ -18,7 +18,7 @@
         <div class="col-6">
           <h1 class="my-3">Ajax Search</h1>
           <hr>
-          <form>
+          <form id="search-movies">
             <div class="form-group">
               <label for="movie-name" class="form-label">Enter a movie name</label>
               <input type="text" id="movie-name" class="form-control" placeholder="The Shawshank Redemption, The Godfather...">
