--- a/04-Front-End/07-AJAX/04-Ajax-Search/index.html
+++ b/04-Front-End/07-AJAX/04-Ajax-Search/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Promo Chat</title>
+    <title>Ajax Search</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,19 +14,21 @@
   <body>
 
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center mb-5">
         <div class="col-6">
           <h1 class="my-3">Ajax Search</h1>
-          <hr>
           <form id="search-movies">
             <div class="form-group">
               <label for="movie-name" class="form-label">Enter a movie name</label>
-              <input type="text" id="movie-name" class="form-control" placeholder="The Shawshank Redemption, The Godfather...">
+              <div class="d-flex">
+                <input type="text" id="movie-name" class="form-control" placeholder="The Shawshank Redemption, The Godfather...">
+                <input type="submit" value="Search" class="btn btn-primary ms-2">
+              </div>
             </div>
           </form>
         </div>
       </div>
-      <div class="row" id="movie-posters">
+      <div class="row" id="movie-cards">
         <!-- TODO: Display movie posters here -->
       </div>
     </div>
