--- a/04-Front-End/07-AJAX/01-Your-Age-From-Your-Name/index.html
+++ b/04-Front-End/07-AJAX/01-Your-Age-From-Your-Name/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Ajax Search</title>
+    <title>Your Age From Your Name</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,20 +15,22 @@
     <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-6">
-          <h1 class="my-3">Ajax Search</h1>
-          <form id="search-movies">
+          <h1 class="my-3">Your age from your first name</h1>
+          <form id="fetch-age">
             <div class="form-group">
-              <label for="movie-name" class="form-label">Enter a movie name</label>
+              <label for="first-name" class="form-label">Enter your first name</label>
               <div class="d-flex">
-                <input type="text" id="movie-name" class="form-control" placeholder="The Shawshank Redemption, The Godfather...">
-                <input type="submit" value="Search" class="btn btn-primary ms-2">
+                <input type="text" id="first-name" class="form-control" placeholder="Élodie, Tom...">
+                <input type="submit" value="Submit" class="btn btn-primary ms-2">
               </div>
             </div>
           </form>
         </div>
       </div>
-      <div class="row" id="movie-cards">
-        <!-- TODO: Display movie posters here -->
+      <div class="row">
+        <div class="col-12 justify-content-center">
+          <p class="text-center" id="your-age">Enter your first name in the form above to discover your age according to the agify API</p class="text-center">
+        </div>
       </div>
     </div>
 
