--- a/04-Front-End/06-HTTP-and-API/03-The-Fork-Restaurants/index.html
+++ b/04-Front-End/06-HTTP-and-API/03-The-Fork-Restaurants/index.html
@@ -6,15 +6,101 @@
 
     <title>The Fork Restaurants</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-
+    <link rel="stylesheet" href="lib/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
 
   <body>
     <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-9">
+          <h1 class="text-center mt-2">The Fork Restaurants</h1>
+          <p class="text-center">Search through the restaurants of <a href="https://the-fork-api.students.lewagon.co/" target="blank">The Fork API</a></p>
+        </div>
+      </div>
+
       <div class="row justify-content-center">
+        <div class="col-3">
+          <div class="card rounded p-4">
+            <form id="searchForm" method="get">
+              <p class="mb-1 fw-bold">👩‍🍳 Cuisine</p>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category1" value="italian" checked>
+                <label class="form-check-label" for="restaurantSearch">
+                  Italian
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category2" value="chinese">
+                <label class="form-check-label" for="restaurantSearch">
+                  Chinese
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category3" value="vietnamese">
+                <label class="form-check-label" for="restaurantSearch">
+                  Vietnamese
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category4" value="japanese">
+                <label class="form-check-label" for="restaurantSearch">
+                  Japanese
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category5" value="korean">
+                <label class="form-check-label" for="restaurantSearch">
+                  Korean
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category6" value="spanish">
+                <label class="form-check-label" for="restaurantSearch">
+                  Spanish
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category7" value="french">
+                <label class="form-check-label" for="restaurantSearch">
+                  French
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category8" value="mexican">
+                <label class="form-check-label" for="restaurantSearch">
+                  Mexican
+                </label>
+              </div>
+              <div class="form-check mb-1">
+                <input class="form-check-input" type="radio" name="restaurantSearch" id="category9" value="indian">
+                <label class="form-check-label" for="restaurantSearch">
+                  Indian
+                </label>
+              </div>
+              <div class="my-4">
+                <label for="location" class="form-label mb-1 fw-bold">📍 Location (optional!)</label>
+                <input type="address" class="form-control" id="location" placeholder="Roma">
+              </div>
+            </form>
+
+            <button type="button" class="btn btn-primary mt-3" id="submitBtn">Search</button>
+          </div>
+        </div>
         <div class="col-6">
-          <!-- ... -->
+          <h2 id="activity" class="text-center mt-5">Restaurant list</h2>
+          <div>
+            <ul>
+              <div class="card-product">
+                <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+                <div class="card-product-infos">
+                  <h2>Product name</h2>
+                  <p>Product description with <strong>relevant info</strong> only.</p>
+                </div>
+              </div>
+
+            </ul>
+          </div>
         </div>
       </div>
     </div>
