--- a/04-Front-End/07-Stimulus-JS/01-My-First-Event-Listener/index.html
+++ b/04-Front-End/07-Stimulus-JS/01-My-First-Event-Listener/index.html
@@ -4,13 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>My First Event Listener</title>
+    <title>My first event listener 🐣</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script type="module" src="lib/index.js"></script>
+    <script type="module" src="javascript/application.js"></script>
+    <style>
+      body {
+        display: flex;
+        height: 100vh;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
   </head>
   <body>
-
+    <button id="clickme" class="btn btn-primary btn-lg">
+      Click me!
+    </button>
   </body>
 </html>
