--- a/04-Front-End/07-Stimulus-JS/03-Character-Count/index.html
+++ b/04-Front-End/07-Stimulus-JS/03-Character-Count/index.html
@@ -8,7 +8,14 @@
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script type="module" src="lib/index.js"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        }
+      }
+    </script>
+    <script src="javascript/application.js" type="module"></script>
   </head>
   <body>
 
