--- a/04-Front-End/04-JS-and-DOM/01-Even-or-odd/index.html
+++ b/04-Front-End/04-JS-and-DOM/01-Even-or-odd/index.html
@@ -1,39 +1,35 @@
 <html>
-<head>
-  <title>Ex 1. - Even or odd?</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="application.css">
-</head>
-<body>
-  <div class="container">
-    <div class="row">
-      <h1 class="text-center my-5">Even or odd? 🧮</h1>
-      <div class="col-12 mt-5 mb-3">
-        <div class="row justify-content-center">
-          <div class="col-3">
-            <h2 class="text-center">0</h2>
-          </div>
-          <div class="col-3">
-            <h2 class="text-center">1</h2>
-          </div>
-          <div class="col-3">
-            <h2 class="text-center">2</h2>
-          </div>
-        </div>
-      </div>
+  <head>
+    <title>Ex 1. - Even or odd?</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
+    <link rel="stylesheet" href="application.css">
+  </head>
 
-      <!-- This div is used to output the JS tests, do not remove! -->
-      <div class="col-12">
-        <div id="results-wrapper">
-          <div id="results" class="row justify-content-center"></div>
-        </div>
+  <body>
+    <div class="container">
+      <div class="row">
+        <h1 class="text-center my-5">Even or odd? 🧮</h1>
       </div>
     </div>
-  </div>
 
-  <script type="module" src="./lib/even_or_odd.js"></script>
-</body>
+    <!-- This div is used to output the JS tests, do not remove! -->
+    <div id="mocha"></div>
+
+    <script src="https://unpkg.com/chai/chai.js"></script>
+    <script src="https://unpkg.com/mocha/mocha.js"></script>
+    <script class="mocha-init">
+      mocha.setup('bdd');
+      mocha.checkLeaks();
+    </script>
+    <script src="lib/even_or_odd.js"></script>
+    <script src="test/even_or_odd.test.js"></script>
+    <script class="mocha-exec">
+      mocha.run();
+    </script>
+  </body>
 </html>
