--- a/04-Front-End/08-Templating/03-Todo-List-Vue/index.html
+++ b/04-Front-End/08-Templating/03-Todo-List-Vue/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Movie List</title>
+  <title>🗒 Todo List</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- boostrap and fontawesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
 
   <!-- imported libraries go here -->
@@ -17,11 +18,11 @@
       }
     }
   </script>
-  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div id="app">
-    <h1>{{message}}</h1>
+    {{ message }}
+    <!-- your code goes here -->
   </div>
   <!-- Import your own javascript -->
   <script src="javascript/application.js" type="module"></script>
