iterators & events - review challenge 5 & optional

--- a/04-Front-End/05-Events-and-Iterators/05-Wagon-Race/index.html
+++ b/04-Front-End/05-Events-and-Iterators/05-Wagon-Race/index.html
@@ -16,6 +16,6 @@
     <!-- You race HTML code here -->
     <hr>
 
-    <script src="main.js"></script>
+    <script type="module" src="./lib/wagon_race.js"></script>
   </body>
 </html>
