--- a/04-Front-End/05-Events-and-Iterators/Optional-01-Minesweeper/index.html
+++ b/04-Front-End/05-Events-and-Iterators/Optional-01-Minesweeper/index.html
@@ -24,6 +24,6 @@
   </table>
 
   <!-- Including your code -->
-  <script type="text/javascript" src="main.js"></script>
+  <script type="module" src="./lib/minesweeper.js"></script>
 </body>
 </html>
