--- a/04-Front-End/08-Templating/02-Recipe-book/index.html
+++ b/04-Front-End/08-Templating/02-Recipe-book/index.html
@@ -32,17 +32,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <template id="recipe-template">
-              <div class="col-6">
-                <div class="card my-2 position-relative">
-                  <i class="fa-solid fa-bookmark text-danger ms-2 position-absolute top-0 end-0 p-2 fs-4"></i>
-                  <img src="" class="card-img-top" alt="">
-                  <div class="card-body d-flex">
-                    <h6 class="card-title">Recipe Title</h6>
-                  </div>
-                </div>
-              </div>
-            </template>
+            <!-- Add the template element here -->
 
             <ul class="row p-0 align-content-stretch" id="recipes-container">
             </ul>
