--- a/04-Front-End/08-Templating/03-Todo-List-Vue/index.html
+++ b/04-Front-End/08-Templating/03-Todo-List-Vue/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- bootstrap and fontawesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
 
   <!-- imported libraries go here -->
@@ -19,12 +19,12 @@
     }
   </script>
 </head>
-<body>
+<body class="bg-light">
   <div id="app">
     {{ message }}
-    <!-- your code goes here -->
+    <!-- Your code goes here -->
   </div>
   <!-- Import your own javascript -->
-  <script src="javascript/application.js" type="module"></script>
+  <script src="lib/to-do-list.js" type="module"></script>
 </body>
 </html>
