ajax - review challenges

--- a/04-Front-End/07-AJAX/01-Name-Age/index.html
+++ b/04-Front-End/07-AJAX/01-Name-Age/index.html
@@ -20,7 +20,7 @@
             <div class="form-group">
               <label for="first-name" class="form-label">Enter your first name</label>
               <div class="d-flex">
-                <input type="text" id="first-name" class="form-control" placeholder="Élodie, Tom...">
+                <input type="text" id="first-name" class="form-control" placeholder="Élodie, Tom..." hint="">
                 <input type="submit" value="Submit" class="btn btn-primary ms-2">
               </div>
             </div>
@@ -29,7 +29,7 @@
       </div>
       <div class="row">
         <div class="col-12 justify-content-center">
-          <p class="text-center" id="your-age">Enter your first name in the form above to discover your age according to the agify API</p class="text-center">
+          <p class="text-center" id="your-age">TODO: Here should be injected your age rendered by the API.</p class="text-center">
         </div>
       </div>
     </div>
