--- a/04-Front-End/09-Stimulus-JS/01-My-First-Event-Listener/index.html
+++ b/04-Front-End/09-Stimulus-JS/01-My-First-Event-Listener/index.html
@@ -7,14 +7,9 @@
     <title>My first event listener 🐣</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script type="importmap">
-      {
-        "imports": {
-          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        }
-      }
-    </script>
-    <script src="javascript/application.js" type="module"></script>
+    
+    <!-- TODO: Import Stimulus in a script with Import maps below -->
+    
     <style>
       body {
         display: flex;
@@ -28,5 +23,7 @@
     <button id="clickme" class="btn btn-primary btn-lg">
       Click me!
     </button>
+
+    <script src="lib/index.js" type="module"></script>
   </body>
 </html>
