--- a/04-Front-End/09-Stimulus-JS/03-Character-Count/index.html
+++ b/04-Front-End/09-Stimulus-JS/03-Character-Count/index.html
@@ -6,24 +6,25 @@
 
     <title>Character Count</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="application.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
-      {
-        "imports": {
-          "stimulus": "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js",
-          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        {
+          "imports": {
+            "@hotwired/stimulus": "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js"
+          }
         }
-      }
-    </script>
-    <script src="javascript/application.js" type="module"></script>
+      </script>
   </head>
+
   <body>
-    <div class="container">
-      <div>
-        <textarea rows="3" placeholder="Type something" class="form-control mb-2"></textarea>
-        <i><!-- TODO: Add the correct target for displaying the counter --></i>
-      </div>
+    <div class="container p-5">
+      <!-- TODO: Code here -->
     </div>
+
+    <script src="lib/index.js" type="module"></script>
   </body>
 </html>
