--- a/04-Front-End/09-Stimulus-JS/04-Checkboxes/index.html
+++ b/04-Front-End/09-Stimulus-JS/04-Checkboxes/index.html
@@ -2,29 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Stimulus Checkboxes</title>
+    <title>Stimulus 101</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="application.css">
+    
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
       {
         "imports": {
-          "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+          "@hotwired/stimulus": "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js"
         }
       }
     </script>
-    <script src="javascript/application.js" type="module"></script>
   </head>
+
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col col-6">
           <form class="mt-5">
             <h3>Categories</h3>
             <div class="form-check">
-              <input id="check-all" type="checkbox" class="form-check-input">
+              <input id="check-all" type="checkbox" class="form-check-input"> 
               <label for="check-all">Check all</label>
             </div>
             <hr>
@@ -50,6 +54,7 @@
         </div>
       </div>
     </div>
-    <script type="module" src="lib/index.js"></script>
+
+    <script src="lib/index.js" type="module"></script>
   </body>
 </html>
