--- a/04-Front-End/07-AJAX/Optional-01-Recipe-Book/index.html
+++ b/04-Front-End/07-AJAX/Optional-01-Recipe-Book/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Recipe book</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
   <!-- Bootstrap and Fontawesome -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
 
   <!-- <link rel="stylesheet" href="style.css"> !-->
 </head>
+
 <body>
   <div class="container">
     <div class="row justify-content-center my-4">
@@ -43,7 +46,8 @@
       <div class="col-4 card p-4">
         <h5>My favourites</h5>
         <ul class="row p-0 align-content-stretch" id="favourites-container">
-          <p class="mb-0">Add a recipe by clicking on the bookmark icon <i class="fa-solid fa-bookmark text-danger"></i></p>
+          <p class="mb-0">Add a recipe by clicking on the bookmark icon <i class="fa-solid fa-bookmark text-danger"></i>
+          </p>
         </ul>
       </div>
     </div>
@@ -51,4 +55,5 @@
 
   <script src="lib/index.js" type="module"></script>
 </body>
+
 </html>
