--- a/04-Front-End/08-Templating/01-Vanilla-Todo-List-Warmup/index.html
+++ b/04-Front-End/08-Templating/01-Vanilla-Todo-List-Warmup/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
+  <!-- your custom stylesheet -->
+  <link rel="stylesheet" href="style.css">
+
   <!-- bootstrap and fontawesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
@@ -18,18 +21,16 @@
   </script>
 </head>
 <body class="bg-light">
-  <div id="app">
-    <div class="row justify-content-center mt-4">
-      <div class="col-lg-4 bg-white rounded shadow-sm p-5">
-        <h1 class="mb-3">🗒 My Todo List</h1>
-        <div id="container">
-          <!-- Beginning of to-do item -->
-          <div class="shadow-sm rounded px-4 py-3 mb-2 border d-flex">
-            <input class="d-flex form-check-input me-1" type="checkbox">
-            <div>To-do title...</div>
-          </div>
-          <!-- End of to-do item -->
+  <div class="row justify-content-center mt-4">
+    <div class="col-lg-4 bg-white rounded shadow-sm p-5">
+      <h1 class="mb-3">🗒 My Todo List</h1>
+      <div id="todosContainer">
+        <!-- Beginning of to-do item -->
+        <div class="shadow-sm rounded px-4 py-3 mb-2 border d-flex">
+          <input class="d-flex form-check-input me-1" type="checkbox">
+          <div>To-do title...</div>
         </div>
+        <!-- End of to-do item -->
       </div>
     </div>
   </div>
