Move inbox id to the right div

--- a/04-Front-End/04-JS-and-DOM/04-Fake-Inbox/index.html
+++ b/04-Front-End/04-JS-and-DOM/04-Fake-Inbox/index.html
@@ -19,9 +19,9 @@
       </div>
     </div>
   </div>
-  <div class="container" id="inbox">
+  <div class="container">
     <div class="row">
-      <div class="col-12 col-md-8">
+      <div class="col-12 col-md-8" id="inbox">
         <div class="row message unread">
           <div class="col-3">DHH</div>
           <div class="col-9">A new job awaits you!</div>
