Added HTML input and button ready to receive copy to clipboard implementation

--- a/04-Front-End/09-Stimulus-JS/02-Copy-To-Clipboard/index.html
+++ b/04-Front-End/09-Stimulus-JS/02-Copy-To-Clipboard/index.html
@@ -21,8 +21,16 @@
   </head>
 
   <body>
-    <div class="container p-5">
-      <!-- TODO: Create your input here -->
+    <div class="d-flex flex-column justify-content-center align-items-center vh-100">
+      <h1 class="mb-5">API Key</h1>
+
+      <!-- TODO: Implement a copy to clipboard -->
+      <div class="input-group w-50">
+        <input class="form-control" type="text" value="0628aea3-48f6-4183-80be-c5def07939f2" readonly>
+        <div class="input-group-append">
+          <button class="btn btn-outline-primary">Copy to Clipboard</button>
+        </div>
+      </div>
     </div>
 
     <script src="lib/index.js" type="module"></script>
