Rewrite the option Templating/React challenge to suppor a setup that matches the React To-Do List challenge (without h)

--- a/04-Front-End/08-Templating/05-Todo-List-React/index.html
+++ b/04-Front-End/08-Templating/05-Todo-List-React/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>🗣️ Quote Generator</title>
+    <title>🗒 Todo List</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
