Fix some typos in optional challenge readme

--- a/04-Front-End/08-Templating/Optional-01-React-Quote-Generator/index.html
+++ b/04-Front-End/08-Templating/Optional-01-React-Quote-Generator/index.html
@@ -19,6 +19,6 @@
     <div id="root"></div>
 
     <!-- Our application code goes here -->
-    <script src="lib/to-do-list.jsx" type="text/babel"></script>
+    <script src="lib/index.jsx" type="text/babel"></script>
   </body>
 </html>
