--- a/04-Front-End/05-Events-and-Iterators/03-Lottery-Scratchcards/index.html
+++ b/04-Front-End/05-Events-and-Iterators/03-Lottery-Scratchcards/index.html
@@ -18,38 +18,38 @@
       <h1 class="text-center">Let's Gamble 🎲</h1>
 
       <ul id="scratchcards" id="scratchcards" class="scratchcards">
-        <li class="scratchard" data-amount="5" data-scratched="false"></li>
-        <li class="scratchard" data-amount="15" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="500" data-scratched="false"></li>
-        <li class="scratchard" data-amount="450" data-scratched="false"></li>
-        <li class="scratchard" data-amount="100" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="1000" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="50" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="10000" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="100" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="1000" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
-        <li class="scratchard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="5" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="15" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="500" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="450" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="100" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="1000" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="50" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="10000" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="100" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="1000" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
+        <li class="scratchcard" data-amount="0" data-scratched="false"></li>
       </ul>
 
-      <div id="footer" class="amount">
-        Your total amount is: <span id="total-amount">0</span>
+      <div id="footer" class="footer">
+        Your balance is: <span id="balance">100</span>€
       </div>
     </div>
 
-    <script type="module" src="./lib/dataset.js"></script>
+    <script type="module" src="./lib/scratchcards.js"></script>
   </body>
 </html>
