Switch out missing Copenhagen image
I used Madrid arbitrarily
resolve https://github.com/lewagon/teachers/issues/1528

--- a/04-Front-End/03-Bootstrap/04-Map-layout/index.html
+++ b/04-Front-End/03-Bootstrap/04-Map-layout/index.html
@@ -67,8 +67,8 @@
         Kyoto
       </div>
 
-      <div class="card" style="background-image: url(http://kitt.lewagon.com/placeholder/cities/copenhagen)">
-        Copenhagen
+      <div class="card" style="background-image: url(http://kitt.lewagon.com/placeholder/cities/madrid)">
+        Madrid
       </div>
 
       <div class="card" style="background-image: url(http://kitt.lewagon.com/placeholder/cities/lisbon)">
