--- a/04-Front-End/07-AJAX/01-Name-Age/index.html
+++ b/04-Front-End/07-AJAX/01-Name-Age/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Name Age</title>
+    <title>Word Definitions</title>
     <link rel="shortcut icon" href="data:image/x-icon;" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -15,12 +15,12 @@
     <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-6">
-          <h1 class="my-3">Your age from your first name</h1>
-          <form id="fetch-age">
+          <h1 class="my-3">Dictionary</h1>
+          <form id="fetch-word">
             <div class="form-group">
-              <label for="first-name" class="form-label">Enter your first name</label>
+              <label for="word" class="form-label">Enter the word to look up</label>
               <div class="d-flex">
-                <input type="text" id="first-name" class="form-control" placeholder="Élodie, Tom..." hint="">
+                <input type="text" id="word" name="word" class="form-control" placeholder="Cat, parsimony..." hint="">
                 <input type="submit" value="Submit" class="btn btn-primary ms-2">
               </div>
             </div>
@@ -29,7 +29,7 @@
       </div>
       <div class="row">
         <div class="col-12 justify-content-center">
-          <p class="text-center" id="your-age">TODO: Here should be injected your age rendered by the API.</p class="text-center">
+          <p class="text-center" id="definition">TODO: The word's definition should be inserted here (after fetching it from the API).</p>
         </div>
       </div>
     </div>
