--- a/04-Front-End/05-Events-and-Iterators/Optional-02-Flex-Panels/index.html
+++ b/04-Front-End/05-Events-and-Iterators/Optional-02-Flex-Panels/index.html
@@ -36,6 +36,6 @@
       <p>Buddies</p>
     </div>
   </div>
-  <script src="./src/panels.js"></script>
+  <script src="./lib/panels.js"></script>
 </body>
 </html>
